--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -120,18 +120,20 @@
 
                         <TextView
                             android:id="@+id/domain"
-                            android:layout_width="110dp"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginStart="21dp"
+                            android:layout_marginStart="60dp"
+                            android:layout_marginEnd="-5dp"
                             android:fontFamily="Times New Roman"
-                            android:text="@string/domainie"
+                            android:text="@string/developer"
                             android:textColor="@color/FontGreyColor"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.274"
                             app:layout_constraintStart_toStartOf="parent"
-                            tools:layout_editor_absoluteY="75dp" />
+                            tools:layout_editor_absoluteY="75dp"
+                            tools:ignore="RtlHardcoded" />
 
                         <ImageView
                             android:layout_width="wrap_content"
