--- a/app/src/main/res/layout/activity_skill_set.xml
+++ b/app/src/main/res/layout/activity_skill_set.xml
@@ -259,7 +259,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginEnd="2dp"
-                                android:src="@drawable/ic_empty_star" />
+                                android:src="@drawable/ic_point_star" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -341,7 +341,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:layout_marginEnd="2dp"
-                                android:src="@drawable/ic_empty_star" />
+                                android:src="@drawable/ic_point_star" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
